<resources>
    <string name="app_name">ToDo Reminder</string>
    <string name="todo_reminder">ToDo Reminder</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login1">Login</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="register">Register</string>
    <string name="title_activity_burger_menu">BurgerMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_location">Map</string>
</resources>
